permalink omits visual-complexity by default

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 theme: jekyll-theme-minimal
 collections:
   - shader
-permalink: /:categories/:title/
+permalink: /visual-complexity/:categories/:title/
